# bellande_humanoid_robot_intelligence_control_system_utility

./: README.md
.github/workflows/: cmake.yml  docker-publish.yml
humanoid_robot_intelligence_control_system_ai_system/: CMakeLists.txt  package.xml  setup.py
humanoid_robot_intelligence_control_system_ai_system/launch/: humanoid_robot_intelligence_control_system_command.launch.py
humanoid_robot_intelligence_control_system_ai_system/launch/ros1/: humanoid_robot_intelligence_control_system_command.launch  humanoid_robot_intelligence_control_system_response.launch
humanoid_robot_intelligence_control_system_ai_system/src/: humanoid_robot_intelligence_control_system_command.py  humanoid_robot_intelligence_control_system_response.py
humanoid_robot_intelligence_control_system_math/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_math/include/humanoid_robot_intelligence_control_system_math/: bezier_curve.h  fifth_order_polynomial_trajectory.h  humanoid_robot_intelligence_control_system_linear_algebra.h  humanoid_robot_intelligence_control_system_math.h  humanoid_robot_intelligence_control_system_math_base.h  humanoid_robot_intelligence_control_system_trajectory_calculator.h  minimum_jerk_trajectory.h  minimum_jerk_trajectory_with_via_point.h  preview_control.h  simple_trapezoidal_velocity_profile.h  step_data_define.h
humanoid_robot_intelligence_control_system_math/src/: bezier_curve.cpp  fifth_order_polynomial_trajectory.cpp  humanoid_robot_intelligence_control_system_linear_algebra.cpp  humanoid_robot_intelligence_control_system_math_base.cpp  humanoid_robot_intelligence_control_system_trajectory_calculator.cpp  minimum_jerk_trajectory.cpp  minimum_jerk_trajectory_with_via_point.cpp  preview_control.cpp  simple_trapezoidal_velocity_profile.cpp  step_data_define.cpp
humanoid_robot_intelligence_control_system_player/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_player/include/humanoid_robot_intelligence_control_system_player/: humanoid_robot_intelligence_control_system_player.h
humanoid_robot_intelligence_control_system_player/src/: humanoid_robot_intelligence_control_system_player.cpp
humanoid_robot_intelligence_control_system_response/: CMakeLists.txt  package.xml  setup.py
humanoid_robot_intelligence_control_system_response/src/: humanoid_robot_intelligence_control_system_response.py
humanoid_robot_intelligence_control_system_utility/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_math/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_math/src/: step_data_define.cpp
humanoid_robot_utility/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_math/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_math/include/robotis_math/: bezier_curve.h  fifth_order_polynomial_trajectory.h  minimum_jerk_trajectory.h  minimum_jerk_trajectory_with_via_point.h  preview_control.h  robotis_linear_algebra.h  robotis_math.h  robotis_math_base.h  robotis_trajectory_calculator.h  simple_trapezoidal_velocity_profile.h  step_data_define.h
robotis_math/src/: bezier_curve.cpp  fifth_order_polynomial_trajectory.cpp  minimum_jerk_trajectory.cpp  minimum_jerk_trajectory_with_via_point.cpp  preview_control.cpp  robotis_linear_algebra.cpp  robotis_math_base.cpp  robotis_trajectory_calculator.cpp  simple_trapezoidal_velocity_profile.cpp  step_data_define.cpp
robotis_utility/: CHANGELOG.rst  package.xml
ros_madplay_player/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_madplay_player/src/: ros_madplay_player.cpp
ros_mpg321_player/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_mpg321_player/include/ros_mpg321_player/: ros_mpg321_player.h
ros_mpg321_player/src/: ros_mpg321_player.cpp
