<?xml version="1.0"?>
<package format="2">
  <name>ros_madplay_player</name>
  <version>0.3.0</version>
  <description>
    This package is a node that can playing mp3 file.
    This package is using madplay which is command-line mp3 player.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
