<?xml version="1.0"?>
<package format="3">
  <name>ros_mpg321_player</name>
  <version>0.1.3</version>
  <description>
    This package is a node that can playing mp3 file.
    This package is using mpg321 which is command-line mp3 player.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>


  <condition if="$ROS_VERSION == 1">
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
  </condition>


  <condition if="$ROS_VERSION == 2">
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
  </condition>


</package>
